(library
  (name eliom_server)
  (public_name eliom.server)
  (synopsis "Eliom: server-side")
  (wrapped false)
  (modules_without_implementation eliom_content_sigs eliom_form_sigs
   eliom_parameter_sigs eliom_registration_sigs eliom_service_sigs
   eliom_shared_sigs)
  (preprocess (pps lwt_ppx js_of_ocaml-ppx_deriving_json))
  (flags (:standard (:include type_includes)))
  (library_flags (:standard -linkall))
  (libraries lwt_react ocsigenserver ocsipersist tyxml))

(include dune.server)

(rule
  (target dune.server)
  (mode promote)
  (deps (glob_files ../*) (universe))
  (action
    (with-stdout-to
      %{target}
      (run ocaml ../../tools/gen_dune.ml --server ..))))

(rule (target includes)
  (action
    (with-stdout-to %{target}
      (system "ocamlfind query -r -i-format lwt_react,ocsigenserver,ocsigenserver.ext,js_of_ocaml,tyxml | tr ' ' '\n'"))))

(rule (target type_includes)
  (action
    (with-stdout-to %{target}
      (system "printf '('; ocamlfind query -i-format js_of_ocaml; printf ')'"))))
